# Muehle

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh
cli/: CMakeLists.txt  main.cpp  main_bak.cpp
gui/: CMakeLists.txt  main.cpp
libmuehle/: CMakeLists.txt  board.cpp  board.hpp  point.cpp
src/: Brettlogik.cpp  Brettlogik.hpp  board.cpp  board.hpp  main.cpp  player.cpp  player.hpp  point.hpp
tests/: CMakeLists.txt  test_brettlogik.cpp  test_morris.cpp
